# copilot-usage

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: release.yml
apps/cli/: copilot-usage.spec
apps/cli/src/copilot_usage/: __main__.py  badges.py  config.py  discovery.py  ingest.py  logging.py  parser.py  tui.py
apps/cli/src/copilot_usage/dashboard/: app.py  queries.py
apps/cli/src/copilot_usage/dashboard/assets/: custom.css
apps/cli/src/copilot_usage/dashboard/pages/: badges.py  explorer.py  overview.py  pipeline.py  settings.py
apps/vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
apps/vscode-extension/src/: extension.ts
apps/vscode-extension/src/core/: aggregator.ts  config.ts  discovery.ts  parser.ts  types.ts
apps/vscode-extension/src/views/: html.ts  panels.ts  statusBar.ts
scripts/: build-vsix.ps1  build.ps1  release.ps1
src/copilot_usage/: __init__.py  __main__.py  aggregator.py  db.py  discovery.py  ingest.py  parser.py  pipeline.py  tui.py
src/copilot_usage/dashboard/: app.py  queries.py
src/copilot_usage/dashboard/pages/: explorer.py  settings.py
