[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_usage"]

[project]
name = "copilot-usage"
version = "0.1.0"
requires-python = ">=3.10"
description = "Local-first Copilot usage analytics — token tracking, premium estimates, and dashboard"
authors = [
  { name = "Sachith Liyanagama", email = "liyanagama@outlook.de" },
]
maintainers = [
  { name = "Sachith Liyanagama", email = "liyanagama@outlook.de" },
]
readme = "README.md"
license = "Apache-2.0"
keywords = ["copilot", "github", "vs-code" ,"usage", "tokens", "analytics", "dashboard", "observability", "local-first", "privacy-focused"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "duckdb>=1.1",
    "dash>=2.17",
    "dash-bootstrap-components>=1.6",
    "dash-bootstrap-templates>=2.0",
    "plotly>=5.22",
    "polars>=1.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "tiktoken>=0.7",
    "loguru>=0.7",
    "rich>=13.0",
    "InquirerPy>=0.3",
    "textual>=0.80",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "ruff>=0.4",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/SachiHarshitha/copilot-token-estimator"
Repository = "https://github.com/SachiHarshitha/copilot-token-estimator"
Issues = "https://github.com/SachiHarshitha/copilot-token-estimator/issues"

[project.scripts]
copilot-usage = "copilot_usage.__main__:main"
